--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@ APP_NAME=Tutor
 APP_ENV=local
 APP_KEY=base64:ivk7S7yI2OAow+1EPOZ8xJnE2ZagQ0O6iEWwL//F4A4=
 APP_DEBUG=true
-APP_URL= https://findmentor.myvirtualland.com
-ASSET_URL = https://findmentor.myvirtualland.com/public
+APP_URL= http://localhost:81/findmentor
+ASSET_URL = http://localhost:81/findmentor/public
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=myvirtu1_findmentor
-DB_USERNAME=myvirtu1_findmentor
-DB_PASSWORD=[HR6Mf9{R5F4
+DB_DATABASE=findmentor
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
